# hr-backend/swagger-hr-api.json
@@ -91,6 +91,30 @@
             }
           }
         }
+      },
+      "patch": {
+        "summary": "Update employee",
+        "tags": [
+          "Employees"
+        ],
+        "parameters": [
+          {
+            "name": "employee",
+            "in": "body",
+            "description": "Employee that we want to update",
+            "schema": {
+              "$ref": "#/definitions/Employee"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Employee is updated",
+            "schema": {
+              "$ref": "#/definitions/Employee"
+            }
+          }
+        }
       }
     },
     "/employees/{identityNo}": {
